<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="0dp"
    android:orientation="vertical"
    android:padding="0dp"
    android:paddingHorizontal="10dp"
    android:paddingVertical="20dp"
    android:paddingStart="8dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingEnd="8dp"
    android:weightSum="4.0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:weightSum="1.0">

        <TextView
            android:id="@+id/language_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/language_text"
            android:textColor="@color/colorTextLight"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/langButton"
            android:layout_marginEnd="8dp"/>

        <ImageView
            android:id="@+id/langButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_gb" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/device_net_title"
        android:textColor="@color/colorTextLight" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:weightSum="1.0">

        <TextView
            android:id="@+id/device_ssid_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="SSID"
            android:textColor="@color/colorTextLight"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/connectButton"
            android:layout_marginEnd="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/connectButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_button"
            android:textColor="#FFF"
            android:textSize="14sp"
            app:cornerRadius="4dp"
            app:icon="@drawable/ic_wifi_white"
            app:strokeColor="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/config_host_text"
        android:textColor="@color/colorTextLight" />

    <EditText
        android:id="@+id/host_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:inputType="number"
        android:textColor="@color/colorAccent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/config_port_text"
        android:textColor="@color/colorTextLight" />

    <EditText
        android:id="@+id/port_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:inputType="number"
        android:textColor="@color/colorAccent" />

</LinearLayout>