<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.PairingActivity">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="70dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_main" />

        <ProgressBar
            android:id="@+id/pairingProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_logo">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/login_button"
                android:textColor="#FFF"
                android:textSize="14sp"
                app:cornerRadius="4dp"
                app:icon="@drawable/ic_refresh"
                app:strokeColor="@color/colorAccent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/configButton"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/config_button"
                android:textColor="#FFF"
                android:textSize="14sp"
                app:cornerRadius="4dp"
                app:icon="@drawable/ic_settings_applications_white"
                app:strokeColor="@color/colorAccent" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>